屏蔽订单详情页面显示商品已删除标记
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14836 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -240,6 +240,7 @@
                   {% endif %}
                   {{product.name}}</a>
                 </div>
+                <span class="ml10" style="color: red"></span>
                 <p class="xui-colorsize">
                   <span>
                       {% if product.custom_model_properties %}
