--- a/weapp/apps/customerized_apps/weshop/templates/mall/product_detail.html
+++ b/weapp/apps/customerized_apps/weshop/templates/mall/product_detail.html
@@ -222,7 +222,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
                     <div class="xui-section-inner xui-section-btn">
                         <!-- 积分商品 -->
                         {% if product.type == 'integral' %}
-                            <a href="./?woid={{request.webapp_owner_id}}&module=apps:weshop:mall&model=order&action=edit&product_id={{product.id}}&product_count=1" class="xui-btn-danger xa-buyBtn xui-btn xui-w93 xui-btn-commen xt-integral-buy-Btn">积分购买</a>
+                            <a href="./?woid={{request.webapp_owner_id}}&module=apps:weshop:mall2&model=order&action=edit&product_id={{product.id}}&product_count=1" class="xui-btn-danger xa-buyBtn xui-btn xui-w93 xui-btn-commen xt-integral-buy-Btn">积分购买</a>
 
                         <!-- 普通商品 -->
                         {% else %}  
@@ -232,7 +232,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
 
                     {% if cur_request_member.is_for_buy_test == True%}
                     <div>
-                        <a href="./?woid={{request.webapp_owner_id}}&module=apps:weshop:mall&model=order&action=edit&type=test&product_id={{product.id}}&product_count=1" class="xui-btn-disable xa-buyBtn xui-btn xui-w93 xui-btn-commen">测试购买</a>
+                        <a href="./?woid={{request.webapp_owner_id}}&module=apps:weshop:mall2&model=order&action=edit&type=test&product_id={{product.id}}&product_count=1" class="xui-btn-disable xa-buyBtn xui-btn xui-w93 xui-btn-commen">测试购买</a>
                     </div>
                     {% endif %}
                 </div>
