--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -5,7 +5,7 @@
 {% block content-panel %}
 <div class="xui-userCenterPage xui-page">
     <!-- 全局导航 -->
-    <div class="wui-globalNav xa-globalNav" data-ui-role="global-nav" data-member="{% if cur_request_member %}true{% else %}false{% endif %}">
+    <div class="wui-globalNav xa-globalNav" {% if request.webapp_owner_id != 216 %} data-ui-role="global-nav"{% endif %} data-member="{% if cur_request_member %}true{% else %}false{% endif %}">
     </div>
         <div class="xui-userCenter-header xa-userCenter-header pr">
             <i data-ui-role="goBack"></i>
