[add]: *新增加需求
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14883 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static/css/base.css
+++ b/weapp/static/css/base.css
@@ -56,6 +56,7 @@ textarea{resize:none}
 .clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden;}
 .clear{height:0;clear:both;overflow:hidden;}
 .vm{vertical-align:middle;}
+.vs{vertical-align:sub;}
 .pr{position:relative;}
 .pa{position:absolute;}
 .abs-right{position:absolute;right:0}
