--- a/weapp/weixin2/templates/weixin/advance_manage/qrcode_order.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcode_order.html
@@ -246,6 +246,34 @@ $(document).ready(function() {
 	$('#start_date').attr('value','');
 	$('#end_date').attr('value','');
 
+
+	function dateViewReload(){
+		var start_date = $('#start_date').val();
+		var end_date = $('#end_date').val();
+		var is_checked = $('.is_show').is(':checked');
+		var dataView = $('[data-ui-role="advanced-table"]').data('view');
+		var is_show = 0;
+		if (is_checked == true){
+			is_show = 1;
+		}
+		var args= '{"start_date":"'+start_date+'","end_date":"'+end_date+'", "is_show":"'+is_show+'"}';
+		dataView.options.args =  args;//this.getFilterValueByDict(args);
+	    dataView.setPage(1);
+		dataView.reload();
+	}
+
+	$('.xa-search').click(function(){
+		dateViewReload();
+	})
+	$('.xa-reset').click(function(){
+		$('#start_date').attr('value','');
+		$('#end_date').attr('value','');
+	})
+
+	$('.is_show').click(function(){
+		dateViewReload();
+	})
+
 });
 </script>
 {% endblock %}
