[add]: *渠道二维码订单
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14893 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/weixin2/templates/weixin/advance_manage/qrcode_order.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcode_order.html
@@ -56,7 +56,7 @@
 		data-ui-role="advanced-table"
 		data-app="new_weixin"
 		data-resource="qrcode_order"
-		data-args='{"setting_id": "{{setting_id}}"}'
+		data-args='{"setting_id": "{{setting_id}}", "is_show":"1"}'
 		data-template-id="#promotions-view"
 		data-enable-paginator="true"
 		data-enable-sort="false"
