[update]: *修改排序 页面
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@14922 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcodes.html
@@ -38,7 +38,7 @@
 		data-app="new_weixin" 
 		data-resource="qrcodes" 
 		data-template-id="#setting_list_view" 
-		data-init-sort="-count" 
+		data-init-sort="-created_at" 
 		data-item-count-per-page="20" 
 		data-enable-paginator="true"
 		class="panel-body mt40"
