--- a/weapp/static_v2/js/view/common_member_select_box_view/template.html
+++ b/weapp/static_v2/js/view/common_member_select_box_view/template.html
@@ -42,9 +42,9 @@
 
 <script id="select-view-tmpl-src" type="text/x-jquery-tmpl">
 	<div style="width:610px; overflow: hidden;">
-		<div class="left-data-list fl">
+		<div class="left-data-list fl" style="width: 230px;">
 		</div>
-		<div class="right-data-list fr">
+		<div class="right-data-list fr" style="width: 230px;">
 		</div>
 		<div style="width: 70px;display:inline-block; margin-left: 30px; margin-top:70px;">
 			<button class="btn btn-default m10 xa-rightMove" type="button"><i class="glyphicon glyphicon-triangle-right"></i></button>
