--- a/weapp/market_tools/tools/lottery/templates/lottery/editor/edit_lottery.html
+++ b/weapp/market_tools/tools/lottery/templates/lottery/editor/edit_lottery.html
@@ -5,7 +5,7 @@
 {% block css %}
 <style type="text/css">
 #product-form input[type='text'], #product-form textarea {
-	width: 330px;
+    width: 330px;
 }
 .star_show:before{
     content: '';
@@ -15,104 +15,104 @@
 
 {% block content-panel %}
 <ul class="breadcrumb">
-	<li>
-		<a href="/market_tools/lottery/">微信抽奖</a>
-		<span class="divider">/</span>
-	</li>
-	<li class="active">{% if lottery.id %}更新{% else %}添加{% endif %}抽奖</li>
+    <li>
+        <a href="/market_tools/lottery/">微信抽奖</a>
+        <span class="divider">/</span>
+    </li>
+    <li class="active">{% if lottery.id %}更新{% else %}添加{% endif %}抽奖</li>
 </ul>
 
 <div id="lotteryLayer" is_edit_page="{% if lottery.name %}true{% endif %}">
 <form class="form-horizontal" method="post" id="roulette-form">
-	<fieldset>
-		<div class="control-group">
-			<label class="control-label" for="name">抽奖活动名称：</label>
-			<div class="controls">
-				<input type="text" class="input-xlarge" id="name" name="name" placeholder="输入活动名称" value="{{ lottery.name }}" data-validate="required" data-validate-max-length="36" />
-				<div class="errorHint"></div>
-			</div>
-		</div>
-		<div class="control-group">
-			<label class="control-label" for="name">时间范围：</label>
-			<div class="controls">
-				<input type="text" class="span2" name="start_at" placeholder="开始时间" data-validate="required" value="{{ lottery.start_at|date:'Y-m-d' }}">
+    <fieldset>
+        <div class="control-group">
+            <label class="control-label" for="name">抽奖活动名称：</label>
+            <div class="controls">
+                <input type="text" class="input-xlarge" id="name" name="name" placeholder="输入活动名称" value="{{ lottery.name }}" data-validate="required" data-validate-max-length="36" />
+                <div class="errorHint"></div>
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="name">时间范围：</label>
+            <div class="controls">
+                <input type="text" class="span2" name="start_at" placeholder="开始时间" data-validate="required" value="{{ lottery.start_at|date:'Y-m-d' }}">
                 <input type="text" class="span2" name="end_at" placeholder="结束时间" data-validate="required" value="{{ lottery.end_at|date:'Y-m-d' }}">
-				<div class="errorHint"></div>
-			</div>
-		</div>
+                <div class="errorHint"></div>
+            </div>
+        </div>
 
-		<div class="control-group">
-			<label class="control-label" for="name">活动类型：</label>
-			<div class="controls">
-				<select name="type" id="lottery_type" class="span2"  data-origin="{{lottery.type}}">
+        <div class="control-group">
+            <label class="control-label" for="name">活动类型：</label>
+            <div class="controls">
+                <select name="type" id="lottery_type" class="span2"  data-origin="{{lottery.type}}">
                     <option value="0">刮刮卡</option>
                     <option value="1">砸金蛋</option>
                     <option value="2">大转盘</option>
                 </select>
-				<div class="errorHint"></div>
-			</div>
-		</div>
+                <div class="errorHint"></div>
+            </div>
+        </div>
 
-		<div class="control-group">
-			<label class="control-label" for="probability">抽奖消耗的积分：</label>
-			<div class="controls">
-				<input type="text" class="input-xlarge w50" id="expend_integral" name="expend_integral" placeholder=""
-				       value="{% if lottery.expend_integral %}{{ lottery.expend_integral }}{% else %}0{% endif %}"
-				       data-validate="require-int"/>
-				<div class="errorHint"></div>
-			</div>
-		</div>
+        <div class="control-group">
+            <label class="control-label" for="probability">抽奖消耗的积分：</label>
+            <div class="controls">
+                <input type="text" class="input-xlarge w50" id="expend_integral" name="expend_integral" placeholder=""
+                       value="{% if lottery.expend_integral %}{{ lottery.expend_integral }}{% else %}0{% endif %}"
+                       data-validate="require-int"/>
+                <div class="errorHint"></div>
+            </div>
+        </div>
 
-<!-- 		<div class="control-group">
-			<label class="control-label" for="probability">预计参与人数：</label>
-			<div class="controls">
-				<input type="text" class="input-xlarge w50" id="expected_participation_count" name="expected_participation_count" placeholder=""
-				       value="{% if lottery.expected_participation_count %}{{ lottery.expected_participation_count }}{% else %}0{% endif %}"
-				       data-validate="require-int"/>
-				<div class="errorHint"></div>
-			</div>
-		</div>
+<!--        <div class="control-group">
+            <label class="control-label" for="probability">预计参与人数：</label>
+            <div class="controls">
+                <input type="text" class="input-xlarge w50" id="expected_participation_count" name="expected_participation_count" placeholder=""
+                       value="{% if lottery.expected_participation_count %}{{ lottery.expected_participation_count }}{% else %}0{% endif %}"
+                       data-validate="require-int"/>
+                <div class="errorHint"></div>
+            </div>
+        </div>
 
         <div class="control-group">
             <label class="control-label" for="probability">每个会员可参与次数：</label>
             <div class="controls"><input class="input-xlarge w50" type="text" name="daily_play_count" value="{{lottery.daily_play_count}}"></div>
         </div> -->
         <div class="control-group">
-			<label class="control-label" for="probability">抽奖限制：</label>
-			<div class="controls">
+            <label class="control-label" for="probability">抽奖限制：</label>
+            <div class="controls">
                 <span class="inline">每人每天</span>
                 <input class="span1" type="text" name="daily_play_count" value="{{lottery.daily_play_count}}" data-validate="require-positive-int" />次
                 <div class="errorHint"></div>
-			</div>
+            </div>
             <div class="errorHint"></div>
-		</div>
+        </div>
 
         <div class="control-group">
-			<label class="control-label" for="probability">未中奖描述语：</label>
-			<div class="controls">
-				<input type="text" class="input-xlarge" placeholder="请填写未中奖后的提示语" id="not_win_desc" name="not_win_desc" value="{% if lottery.not_win_desc %} {{ lottery.not_win_desc }} {% else %}谢谢参与{% endif %}" data-validate="required" data-validate-max-length="10" />
+            <label class="control-label" for="probability">未中奖描述语：</label>
+            <div class="controls">
+                <input type="text" class="input-xlarge" placeholder="请填写未中奖后的提示语" id="not_win_desc" name="not_win_desc" value="{% if lottery.not_win_desc %} {{ lottery.not_win_desc }} {% else %}谢谢参与{% endif %}" data-validate="required" data-validate-max-length="10" />
                 <div class="errorHint"></div>
-			</div>
-		</div>
-		
-		 <div class="control-group" style="display:none">
-			<label class="control-label" for="probability">中奖机制：</label>
-			<div class="controls" data-validate="selectRadio">
-				<label class="radio"><input type="radio" name="award_type" value="0" checked="checked" {% if lottery.award_type == 0 %}checked="checked"{% endif %}>每个会员只能中一次</label>
-				<label class="radio"><input type="radio" name="award_type" value="1" {% if lottery.award_type == 1 %}checked="checked"{% endif %}>每个会员每天可中一次</label>
+            </div>
+        </div>
+        
+         <div class="control-group" style="display:none">
+            <label class="control-label" for="probability">中奖机制：</label>
+            <div class="controls" data-validate="selectRadio">
+                <label class="radio"><input type="radio" name="award_type" value="0" checked="checked" {% if lottery.award_type == 0 %}checked="checked"{% endif %}>每个会员只能中一次</label>
+                <label class="radio"><input type="radio" name="award_type" value="1" {% if lottery.award_type == 1 %}checked="checked"{% endif %}>每个会员每天可中一次</label>
                 <label class="radio inline"><input type="radio" name="award_type" value="2" {% if lottery.award_type == 2 %}checked="checked"{% endif %}>每个会员每隔</label><input class="span1" type="text" name="award_hour" value="{{lottery.award_hour}}0">小时可中一次
                 <label class="radio"><input type="radio" name="award_type" value="3" {% if lottery.award_type == 3 %}checked="checked"{% endif %}>每个会员每次抽都可中</label>
-				<div class="errorHint"></div>
-			</div>
-		</div>
+                <div class="errorHint"></div>
+            </div>
+        </div>
 
 
-		<div class="control-group">
+        <div class="control-group">
             <label class="control-label" for="probability">奖项设置：</label>
-			<div class="controls w500">
+            <div class="controls w500">
                 <div style="float: right; font-weight: bold; color: rgb(85, 85, 85);">中奖概率总和不能超过100%</div>
                 <div class="cl"></div>
-				<div class=" prizeItem" style="display:none;">
+                <div class=" prizeItem" style="display:none;">
                     <p>
                         <span class="label">奖项名称：</span>
                         <span>谢谢参与</span>
@@ -123,10 +123,10 @@
                         <span class="errorHint"></span>
                     </p>
                 </div>
-				
+                
                 {% if lottery.prizes %}
                 {% for prize in lottery.prizes %}
-				<div class="tx_prizeItem prizeItem">
+                <div class="tx_prizeItem prizeItem">
                     <button class="close tx_removeItem" type="button">×</button>
                     <p>
                         <span class="label">奖项名称：</span>
@@ -146,14 +146,14 @@
                     </p>
                     <div class="zoom">
                         <span class="label">奖品类型：</span>
-                        <select name="prize_type|1" class="span2" data-origin="{{prize.prize_type}}" value="{{prize.prize_type}}">
+                        <select name="prize_type|1" class="span2" data-origin="{{prize.prize_type}}">
                             <option value="1">优惠劵</option>
                             <!--<option value="2">兑换码</option>-->
                             <option value="3">积分</option>
                             <option value="0">实物奖品</option>
                         </select>
 
-                        <select class="span2 xua-coupon" name="prize_source|1" for_type="1" disabled="disabled" style="display:none;" value="{{prize.prize_source}}" data-origin="{{prize.prize_source}}">
+                        <select class="span2 xua-coupon" name="prize_source|1" for_type="1" disabled="disabled" style="display:none;" data-origin="{{prize.prize_source}}">
                             <option value="">请选择优惠劵...</option>
                             {% for rule in coupon_rules %}
                             <option value="{{rule.id}}" data-count="{{rule.remained_count}}">{{rule.name}}</option>
@@ -216,22 +216,22 @@
                 </div>
                 {% endif %}
                 <button class="btn btn-block tx_addPrizeItem" for_item=".tx_prizeItem" type="button">添加奖项</button>
-			</div>
-		</div>
+            </div>
+        </div>
 
-		<div class="control-group">
-			<label class="control-label" for="detail">活动详情：</label>
-			<div class="controls">
-				<textarea rows="5" class="input-xlarge hide" id="detail" name="detail" data-validate="required" placeholder="输入活动详情" data-validate-max-length="10240">{{ lottery.detail }}</textarea>
-			</div>
-		</div>
+        <div class="control-group">
+            <label class="control-label" for="detail">活动详情：</label>
+            <div class="controls">
+                <textarea rows="5" class="input-xlarge hide" id="detail" name="detail" data-validate="required" placeholder="输入活动详情" data-validate-max-length="10240">{{ lottery.detail }}</textarea>
+            </div>
+        </div>
 
     </fieldset>
 
-	<fieldset>
-		<legend></legend>
-		<div class="control-group">
-			<div class="controls">
+    <fieldset>
+        <legend></legend>
+        <div class="control-group">
+            <div class="controls">
                 {% if lottery.can_update %}
                 <p style="color:#C09853;">活动一旦创建将不可修改，请先认真核对确认</p>
                 <button type="submit" class="btn btn-success" id="submit-product">&nbsp;&nbsp;&nbsp;&nbsp;保&nbsp;&nbsp;存&nbsp;&nbsp;&nbsp;&nbsp;</button>
@@ -241,8 +241,8 @@
                 {% endif %}
 
             </div>
-		</div>
-	</fieldset>
+        </div>
+    </fieldset>
 </form>
 </div>
 
@@ -252,7 +252,7 @@
 {% endblock %}
 
 {% block jsTemplate %}
-	{% include_raw 'jsTemplate/imageView.html' %}
+    {% include_raw 'jsTemplate/imageView.html' %}
 {% endblock %}
 
 {% block js %}
